Closed
Bug 1797222
Opened 2 years ago
Closed 2 years ago
[CTW] Wrong y coordinate reported for text on lines other than the first
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
108 Branch
Tracking | Status | |
---|---|---|
firefox108 | --- | fixed |
People
(Reporter: Jamie, Assigned: morgan)
References
Details
(Whiteboard: [ctw-m3])
Attachments
(1 file)
STR:
- Open this test case:
data:text/html,<textarea>ab%0acd
- Get the Accessible for the textarea.
- Call CharBounds on it with offset 0. Note the coordinates.
- Call CharBounds on it with offset 3.
- Expected: Large y coordinate (because offset 3 is on the second line).
- Actual: The y coordinate is the same as in step 3).
This is not specific to textarea; you can also reproduce it with <pre>
. However, if you use a <br>
, so you have two separate text nodes, this works as expected:
data:text/html,<pre>ab<br>cd
I'm guessing there's something weird going on with continuations here.
Practical impact: This breaks Windows Text Cursor Indicator in multi line text boxes, which uses these coordinates to draw its cursor.
Assignee | ||
Comment 1•2 years ago
|
||
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/06d6c10bc5d7
Make char rects relative to their continuation before caching r=Jamie
Comment 3•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox108:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•