Bug 1797222: Make char rects relative to their continuation before caching r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D160401